# sonar-build-week

./: .gitignore  README.md
backend/: METHODOLOGY.md  README.md  pyproject.toml
backend/benchmarks/: delusion_reinforcement.yaml  paternalism.yaml  self_preservation.yaml  snitching.yaml  warmth.yaml
backend/src/charwatch/: __init__.py  cli.py  config.py  container.py  logging.py  service.py
backend/src/charwatch/api/: app.py  deps.py  schemas.py
backend/src/charwatch/api/routes/: drift.py  meta.py  models.py  monitors.py  runs.py
backend/src/charwatch/benchmarks/: __init__.py  editor.py  loader.py
backend/src/charwatch/db/: __init__.py  base.py  models.py  repository.py
backend/src/charwatch/domain/: __init__.py  enums.py  models.py
backend/src/charwatch/evaluation/: __init__.py  fingerprint.py  judge.py  runner.py  scoring.py
backend/src/charwatch/providers/: __init__.py  base.py  openai_provider.py  registry.py
backend/src/charwatch/scheduler/: __init__.py  jobs.py
backend/tests/: fakes.py  test_api.py  test_benchmark_editor.py  test_benchmarks.py  test_config.py  test_fingerprint.py  test_judge.py  test_repository.py  test_runner.py  test_scheduler.py  test_scoring.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Logo.tsx  api.ts  components.tsx  format.ts  styles.css  types.ts
frontend/src/views/: DataPage.tsx  EvalsPage.tsx  MethodologyPage.tsx  SettingsPage.tsx
