[project]
name = "charwatch"
version = "0.1.0"
description = "Character-drift observatory: track how frontier LLMs shift on behavioral/values dimensions across versions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "charwatch" }]

dependencies = [
    "openai>=1.60",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "apscheduler>=3.10",
    "tenacity>=8.4",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[project.scripts]
charwatch = "charwatch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charwatch"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PL"]
ignore = ["PLR0913"]  # allow functions with several keyword args (config-heavy constructors)

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "SIM300"]  # literals-in-assertions and subset-order are fine in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
